News UAT/force-app/main/default/objects/Project_Milestones_and_Deliverables__c/Project_Milestones_and_Deliverables__c.object-meta.xml
<CustomObject>
    <description>Key Milestones and Deliverables</description>
    <label>Project Milestones and Deliverables</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Project Milestones and Deliverables</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Milestones and Deliverables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>