News UAT/force-app/main/default/objects/Project_Milestones_and_Deliverables__c/fields/Actual_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Completion_Date__c</fullName>
    <label>Actual Completion Date</label>
    <type>Date</type>
</CustomField>