News UAT/force-app/main/default/objects/Project_Milestones_and_Deliverables__c/fields/Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Confirmation by the Delivery Manager that a key deliverable has been completed</description>
    <inlineHelpText>Confirmed by the SFDC Delivery Manager</inlineHelpText>
    <label>Confirmed</label>
    <type>Checkbox</type>
</CustomField>