News UAT/force-app/main/default/objects/Project_Milestones_and_Deliverables__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Milestone Date</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>