News UAT/force-app/main/default/objects/Project_Milestones_and_Deliverables__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Milestone Description</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>