News UAT/force-app/main/default/objects/Project_Milestones_and_Deliverables__c/fields/Fixed_Fee_Payment__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Fee_Payment__c</fullName>
    <description>Designates payment to be made when milestone is completed in a fixed fee project.</description>
    <inlineHelpText>Designates payment to be made when milestone is completed in a fixed fee project.</inlineHelpText>
    <label>Fixed Fee Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>