News UAT/force-app/main/default/objects/Project_Milestones_and_Deliverables__c/fields/Key_Deliverable__c.field-meta.xml
<CustomField>
    <fullName>Key_Deliverable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates a key deliverable milestone</description>
    <inlineHelpText>Is this milestone a key deliverable in the project (i.e. a formal signoff is required by the Client)?</inlineHelpText>
    <label>Key Deliverable?</label>
    <type>Checkbox</type>
</CustomField>