News UAT/force-app/main/default/objects/Project_Milestones_and_Deliverables__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <description>Milestone Name</description>
    <label>Milestone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>