News UAT/force-app/main/default/objects/Project_Milestones_and_Deliverables__c/fields/Milestone_Status_Icon__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Status_Icon__c</fullName>
    <description>Milestone Status Icon</description>
    <formula>IMAGE( 
CASE(   Status__c  , 
&quot;New&quot;, &quot;/img/samples/stars_100.gif&quot;, 
&quot;In Process&quot;, &quot;/img/samples/stars_300.gif&quot;, 
&quot;On Hold&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;Complete&quot;, &quot;/img/samples/stars_500.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;milestone status icon&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestone Status Icon</label>
    <type>Text</type>
</CustomField>