News UAT/force-app/main/default/objects/Project_Milestones_and_Deliverables__c/fields/Original_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Completion_Date__c</fullName>
    <description>As defined by the original project timeline during the planning stage of the project</description>
    <inlineHelpText>As defined by the original project timeline during the planning stage of the project</inlineHelpText>
    <label>Original Completion Date</label>
    <type>Date</type>
</CustomField>