News UAT/force-app/main/default/objects/Project_Milestones_and_Deliverables__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Prepare</fullName>
                <default>true</default>
                <label>1 - Prepare</label>
            </value>
            <value>
                <fullName>2 - Architect</fullName>
            </value>
            <value>
                <fullName>3 - Construct</fullName>
            </value>
            <value>
                <fullName>4 - Validate</fullName>
            </value>
            <value>
                <fullName>5 - Deploy</fullName>
            </value>
            <value>
                <fullName>6 - Warranty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>