News UAT/force-app/main/default/objects/Project_Milestones_and_Deliverables__c/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <description>G = on target to meet completion date
Y = delayed, but no impact to overall project schedule
R = delayed, will impact go live date</description>
    <inlineHelpText>G = on target to meet completion date
Y = delayed, but no impact to overall project schedule
R = delayed, will impact go live date</inlineHelpText>
    <label>Progress</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
                <default>true</default>
                <label>Green</label>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>DONE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>