News UAT/force-app/main/default/objects/Project_Milestones_and_Deliverables__c/fields/Progress_Flag__c.field-meta.xml
<CustomField>
    <fullName>Progress_Flag__c</fullName>
    <formula>IMAGE( 
CASE(  Progress__c , 
&quot;Green&quot;, &quot;/img/samples/flag_green.gif&quot;, 
&quot;Yellow&quot;, &quot;/img/samples/flag_yellow.gif&quot;, 
&quot;Red&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;cust sat indicator&quot;)</formula>
    <label>Progress Flag</label>
    <type>Text</type>
</CustomField>