News UAT/force-app/main/default/objects/Project_Milestones_and_Deliverables__c/fields/Revised_Estimated_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Revised_Estimated_Completion_Date__c</fullName>
    <description>If the estimate changes, enter the new date here</description>
    <inlineHelpText>If the estimate changes, enter the new date here</inlineHelpText>
    <label>Revised Estimated Completion Date</label>
    <type>Date</type>
</CustomField>