News UAT/force-app/main/default/objects/Project_Milestones_and_Deliverables__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Phase__c</columns>
    <columns>Milestone__c</columns>
    <columns>Description__c</columns>
    <columns>Date__c</columns>
    <columns>Status__c</columns>
    <columns>Actual_Completion_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>